objects/EDX_Discharge_Data__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Id__c</fullName>
        <label>Collateral Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDX_Discharge_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDX Discharge Response</label>
        <referenceTo>EDX_Discharge_Response__c</referenceTo>
        <relationshipLabel>EDX Discharge Data</relationshipLabel>
        <relationshipName>EDX_Discharge_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>errors__c</fullName>
        <label>errors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>has_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>registrationId__c</fullName>
        <label>registrationId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_Number__c</fullName>
        <label>registration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EDX Discharge Data</label>
    <nameField>
        <displayFormat>EDD-{0000000}</displayFormat>
        <label>EDX Discharge Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDX Discharge Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>